cmake_minimum_required(VERSION 3.5)

project(myfirtstcppprog LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(myfirtstcppprog main.cpp
    Character.cpp Character.h Command.cpp Command.h CommandWords.cpp CommandWords.h item.cpp item.h Parser.cpp Parser.h Room.cpp Room.h ZorkUL.cpp ZorkUL.h)

include(GNUInstallDirs)
install(TARGETS myfirtstcppprog
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
